--- a/app/views/squirrels/new.erb
+++ b/app/views/squirrels/new.erb
@@ -1,5 +1,10 @@
 <form method="POST" action="/squirrels">
   <input type="text" name="name" placeholder="Name" >
   <input type="text" name="color" placeholder="Color" >
+  <select name="tree_id">
+    <% @trees.each do |tree| %>
+      <option value="<%= tree.id %>"><%= tree.location %></option>
+    <% end %>
+  </select>
   <input type="submit" value="Create">
 </form>
