--- a/app/views/squirrels/show.erb
+++ b/app/views/squirrels/show.erb
@@ -1,6 +1,11 @@
 <div>
   <h1><%= @squirrel.name %></h1>
   <p><%= @squirrel.name %> is a <%= @squirrel.color %> squirrel. Perhaps eventually there will be a blurb about <%= @squirrel.name %> here.</p>
+  <% if @squirrel.tree %>
+    <p><%= @squirrel.name %> belongs to the <%= @squirrel.tree.height %> foot tree in <%= @squirrel.tree.location %>.</p>
+  <% else %>
+    <p>This squirrel does not belong to a tree.</p>
+  <% end %>
   <ul>
     <li><a href="/squirrels/<%= @squirrel.id %>/edit">Edit this squirrel</a></li>
     <li>
