ajaxify squirrel creation on home page

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,11 @@
   <title>Squirrels</title>
 </head>
 <body>
+  <div>
+    <textarea></textarea>
+  </div>
+  <div id="error-box">
+  </div>
   <nav>
     <% if logged_in? %>
       <h3>Welcome, <%= current_squirrel.username %>, you're logged in.</h3>
