--- a/app/views/squirrels/index.erb
+++ b/app/views/squirrels/index.erb
@@ -1,8 +1,9 @@
 <a href="/squirrels/new">Click here</a> to add a new squirrel.
-<% @squirrels.each do |squirrel| %>
-  <p>
-    <h1><%= squirrel.username %></h1>
-    <%= squirrel.username %> is a <%= squirrel.color %> squirrel.
-    <a href="/squirrels/<%= squirrel.id %>">Click here</a> to view <%= squirrel.username %>'s profile.
-  </p>
-<% end %>
+
+<%= erb :'squirrels/_new_form' %>
+
+<div id="squirrel-container">
+  <% @squirrels.each do |squirrel| %>
+    <%= erb :'squirrels/_short', locals: {squirrel: squirrel} %>
+  <% end %>
+</div>
