event delegation and color changing jquery

--- a/app/views/squirrels/_short.erb
+++ b/app/views/squirrels/_short.erb
@@ -1,4 +1,5 @@
 <div>
-  <h1><%= squirrel.username %></h1>
+  <h1 class="squirrel-heading"><%= squirrel.username %></h1>
   <p><%= squirrel.username %> is a <%= squirrel.color %> squirrel.<a href="/squirrels/<%= squirrel.id %>">Click here</a> to view <%= squirrel.username %>'s profile.</p>
+  <button class="fancy">Click me!</button>
 </div>
