change names to short_bio

--- a/app/views/squirrels/index.erb
+++ b/app/views/squirrels/index.erb
@@ -4,6 +4,6 @@
 
 <div id="squirrel-container">
   <% @squirrels.each do |squirrel| %>
-    <%= erb :'squirrels/_short', locals: {squirrel: squirrel} %>
+    <%= erb :'squirrels/_short_bio', locals: {squirrel: squirrel} %>
   <% end %>
 </div>
